[GTK] Memory leak in DRT EventSender.cpp https://bugs.webkit.org/show_bug.cgi?id=85886

Patch by Sudarsana Nagineni <sudarsana.nagineni@linux.intel.com> on 2012-05-08
Reviewed by Martin Robinson.

Fix a memory leak in gdkModifersFromJSValue() by using JSRetainPtr for
JSString created with JSStringCreateWithUTF8CString.

* DumpRenderTree/gtk/EventSender.cpp:
(gdkModifersFromJSValue):

Canonical link: https://commits.webkit.org/103485@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116434 268f45cc-cd09-0410-ab3c-d52691b4dbfc